src/app/app.css
* {
    margin: 0;
    padding: 0;
}

html, body {
    height:100%;
}

main{
    margin-top:60px;
}


ul.nav-pills.full-width > li{
    width:50%;
    margin-left:0;
}
#spot-automatisch .form-group{
    margin-top: 60px;
}
#spot-automatisch .form-group select, #spot-automatisch .form-group select:focus, #spot-automatisch .form-group input, #spot-automatisch .form-group input:focus{
    height: 70px;
    line-height: 70px;
    font-size:50px;
}

.rightButton {
    position: absolute;
    right: 50px;
    bottom: 24px;
}

.rightButton span {
    font-size: 60px;
    left: -4px;
    font-weight: 400;
    position: relative;
    top: -30px;
}

#spotMap{
    height:500px;
}

